Added "NOT BETWEEN" and started writing JUnit tests.